# darts-nextgen

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  README_conda_install.md  README_pixi_shell.md  check_cuda.py  clear_logs.py  config.toml  config.toml.example  create_env.sh  create_env_albedo.sh  create_env_albedo_2.sh  create_env_albedo_3.sh  create_env_albedo_conda_forge.sh  darts_albedo_environment.yml  darts_albedo_environment_2.yml  darts_albedo_environment_3.yml  darts_nextgen-0.10.0.post12+88a3f07-py3-none-any.whl  dask_cleanup.py  delete_env.py  environment.yml  environment_from_jonas.yml  environment_only_conda_forge.yml  environment_only_conda_forge_run_python.yml  mkdocs.yml  new_config.toml  pixi.toml  planet_config.toml  pyproject.toml  ray_runtime_env.json  test_remote_ray.py  versions.json
0.1.11/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  index.html  objects.inv  sitemap.xml
0.2.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.0/: 404.html  index.html  sitemap.xml
0.3.1/: 404.html  index.html  objects.inv  sitemap.xml
0.3.2/: 404.html  index.html  objects.inv  sitemap.xml
darts/: README.md
darts-acquisition/: README.md  pyproject.toml
darts-acquisition/src/darts_acquisition/: __init__.py  admin.py  arcticdem.py  exceptions.py  landsat.py  planet.py  s2.py  tcvis.py
darts-acquisition/src/darts_acquisition/arcticdem/: __init__.py  datacube.py  vrt.py
darts-acquisition/src/darts_acquisition/s2/: __init__.py  cdse_mosaic.py  cdse_scene.py  debug_export.py  gee_scene.py  grid.py  quality_mask.py  raw_data_store.py  s2_legacy.py  s2cdse.py  s2gee.py
darts-acquisition/src/darts_acquisition/utils/: __init__.py  arosics.py  copernicus.py  grid.py  storage.py
darts-acquisition/test/: test_cdse.py  test_major_tom_grid.py  test_optical.py
darts-ensemble/: README.md  pyproject.toml
darts-export/: README.md  pyproject.toml
darts-export/src/darts_export/: __init__.py  check.py  conversion.py  export.py  inference.py  miniviz.py  test.py  vectorization.py
darts-export/test/: conftest.py  test_inference.py  test_polygons.py  test_vectorization.py
darts-pipeline/: README.md  pyproject.toml
darts-pipeline/app/: native.py  run.py
darts-postprocessing/: README.md  pyproject.toml
darts-postprocessing/src/darts_postprocessing/: __init__.py  postprocess.py  prepare_export.py
darts-preprocessing/: README.md  pyproject.toml
darts-preprocessing/src/darts_preprocessing/: __init__.py  legacy.py  preprocess.py  preprocess_tobi.py  utils.py  v2.py
darts-preprocessing/src/darts_preprocessing/data_sources/: arcticdem.py  planet.py  s2.py  tcvis.py
darts-preprocessing/src/darts_preprocessing/engineering/: __init__.py  arcticdem.py  dissection_index.py  indices.py  quality_masks.py  spyndex.py
darts-preprocessing/src/darts_preprocessing/utils/: data_pre_processing.py
darts-segmentation/: README.md  pyproject.toml
darts-segmentation/src/: mock_data.py
darts-segmentation/src/darts_segmentation/: __init__.py  hardcoded_stuff.py  inference.py  mock_data.py  segment.py  utils.py
darts-segmentation/src/darts_segmentation/metrics/: __init__.py  binary_instance_prc.py  binary_instance_stat_scores.py  boundary_helpers.py  boundary_iou.py  instance_helpers.py
darts-segmentation/src/darts_segmentation/training/: __init__.py  adp.py  augmentations.py  callbacks.py  cv.py  data.py  data_validate.py  hparams.py  module.py  prepare_training.py  reversed_loguniform.py  scoring.py  train.py  tune.py  viz.py
darts-segmentation/test/: test_datasplit.py  test_hparams.py  test_instance_metrics.py  test_patches.py  test_patches_new.py  test_scoring.py
darts-segmentation/test/test_instance_metrics/: test_defined_images.py  test_helpers.py
darts-segmentation/tests/: test_patches.py
darts-superresolution/: README.md  pyproject.toml
darts-superresolution/src/darts_superresolution/: __init__.py  scratch.py  sr.py  superresolution_test.py  upscale.py
darts-superresolution/src/darts_superresolution/config/: sr_sr3.json  sr_sr3_inference.json  sr_sr3_wave.json  sr_sr3_wave_inference.json
darts-superresolution/src/darts_superresolution/core/: logger.py  metrics.py  wandb_logger.py
darts-superresolution/src/darts_superresolution/data_processing/: LRHR_dataset.py  __init__.py  patching.py  prepare_data.py  util.py
darts-superresolution/src/darts_superresolution/model/: __init__.py  base_model.py  inference.py  model.py  networks.py  scheduler.py
darts-superresolution/src/darts_superresolution/model/sr3_modules/: diffusion.py
darts-superresolution/src/darts_superresolution/model/wave_modules/: diffusion.py  diffusion_ddim.py  unet.py
darts-utils/: README.md  pyproject.toml
data-download/: data_download.py
docs/: cli.md  contribute.md  getting_started.md  index.md  overview.md  ref.md
latest/: 404.html  index.html  sitemap.xml
ncsa-deployment/: run_sentinel.py
notebooks/: adem-val.ipynb  aspect.ipynb  cdse-mosaics.ipynb  check_smp_combos.ipynb  compression.ipynb  compute-estimation.ipynb  compute-estimation.py  create_api_docs.ipynb  create_api_docs.py  landsat.ipynb  major-tom.ipynb  mock-segmentation-inputs.ipynb  model-convert.ipynb  patch-inference.ipynb  patching.ipynb  planet-sweep-analysis.ipynb  radio-fuckup.ipynb  score_strategies.py  sentinel2_from_labels.ipynb  spyndex.ipynb  superresolution.ipynb  test-arcticdem-datacube.ipynb  test-e2e.ipynb  viz-arcticdem.ipynb
test/: nohup_test_no_write.py  nohup_test_write.py  nohup_test_write_local.py  test.sh
v0.10.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.2/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.3/: 404.html  index.html  objects.inv  sitemap.xml
v0.10.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.11.0/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.4/: 404.html  index.html  objects.inv  sitemap.xml
v0.3.5/: 404.html  index.html  sitemap.xml
v0.4.0/: 404.html  index.html  sitemap.xml
v0.4.1/: 404.html  index.html  objects.inv  (+1 more)
(+1860 files in other folders)
