[project]
name = "darts-nextgen"
version = "0.3.2"
description = "Panarctic Database of Active Layer Detachment Slides and Retrogressive Thaw Slumps from Deep Learning on High Resolution Satellite Imagery."
dependencies = [
    # General & Utils
    "rich>=13.9.2",
    "cyclopts>=3.1.0",
    "lovely-tensors>=0.1.17",
    "lovely-numpy>=0.2.13",
    "setuptools>=75.5.0",
    "names-generator>=0.2.0",
    # IO
    "boto3>=1.37.7",
    "psycopg2>=2.9.10",
    "h5netcdf>=1.3.0",
    "rasterio>=1.4.0",
    "rioxarray>=0.17.0",
    "geopandas>=1.0.1",
    "shapely>=2.0.0",
    "earthengine-api>=1.1.5",
    "xee>=0.0.20",
    "pystac>=1.12.1",
    "xpystac>=0.1.3",
    "pystac-client>=0.8.6",
    "odc-geo>=0.4.8",
    "odc-stac[botocore]>=0.3.10",
    "toml>=0.10.2",
    "zarr[jupyter]>=2.18.3, <3",
    # Training and Inference
    "segmentation-models-pytorch>=0.4.0",
    "lightning>=2.4.0",
    "albumentations>=1.4.21",
    "wandb>=0.18.7",
    "optuna>=4.1.0",
    "torchmetrics>=1.6.0",
    "timm>=1.0.13",
    # Processing
    "scikit-image>=0.20",
    "scipy>=1.14.1",
    "xarray-spatial>=0.4.0",
    "dask>=2024.11.0",
    "distributed>=2024.12.0",
    "geocube>=0.7.0",
    "numpy>=1.26.3, <2",
    "xarray>=2024.9.0",
    "ray[data]>=2.37.0",
    # Visualization
    "cartopy>=0.24.1",
    "hvplot>=0.11.1",
    "geoviews>=1.13.0",
    "datashader>=0.16.3",
    "folium>=0.18.0",
    "bokeh>=3.5.2",
    "jupyter-bokeh>=4.0.5",
    "seaborn>=0.13.2",
    # Workspace
    "darts-acquisition",
    "darts-ensemble",
    "darts-export",
    "darts-postprocessing",
    "darts-preprocessing",
    "darts-segmentation",
    "darts-superresolution",
    "darts-utils"
]
readme = "README.md"
requires-python = ">= 3.11"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
    { name = "Konrad Heidler", email = "k.heidler@tum.de" },
    { name = "Jonas Küpper", email = "jonas.kuepper@awi.de" },
    { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
    { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
]

[project.optional-dependencies]
cpu = ["torch==2.2.0", "torchvision==0.17.0"]
cuda118 = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "cucim-cu11>=24.8",
    "cupy-cuda11x>=13.3.0",
    "cupy-xarray",
    "cuda-python>=12.6.2.post1",
    "pynvml==11.4.1",
]
cuda121 = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "cucim-cu12>=24.8",
    "cupy-cuda12x>=13.3.0",
    "cupy-xarray",
    "cuda-python>=12.6.2.post1",
    "pynvml==11.4.1",
]
cuda124 = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "cucim-cu12>=24.8",
    "cupy-cuda12x>=13.3.0",
    "cupy-xarray",
    "cuda-python>=12.6.2.post1",
    "pynvml==11.4.1",
]
cuda126 = [
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "cucim-cu12>=24.8",
    "cupy-cuda12x>=13.3.0",
    "cupy-xarray",
    "cuda-python>=12.6.2.post1",
    "pynvml==11.4.1",
]

[project.scripts]
darts = "darts.cli:start_app"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.2",
    "ruff>=0.8.3",
    "pyright>=1.1.384",
    "pytest>=8",
    "ipywidgets>=8.1.5",
    "folium>=0.17.0",
    "mapclassify>=2.8.1",
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material[imaging]>=9.5.38",
    "mike>=2.1.3",
    "mkdocstrings[python]>=0.26.1",
    "mkdocs-git-revision-date-localized-plugin>=1.2.9",
    "mkdocs-git-committers-plugin-2>=2.3.0",
    "mkdocs-glightbox>=0.4.0",
]

# ==============================================================================
# Build System Configuration
# ==============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["darts/src/darts"]

# ==============================================================================
# uv Configuration
# ==============================================================================

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cuda118" },
    { extra = "cuda121" },
    { extra = "cuda124" },
    { extra = "cuda126" },
  ],
]

[tool.uv.sources]
cupy-xarray = { git = "https://github.com/xarray-contrib/cupy-xarray", branch = "main" }
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cuda118" },
  { index = "pytorch-cu121", extra = "cuda121" },
  { index = "pytorch-cu124", extra = "cuda124" },
  { index = "pytorch-cu126", extra = "cuda126" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu118", extra = "cuda118" },
  { index = "pytorch-cu121", extra = "cuda121" },
  { index = "pytorch-cu124", extra = "cuda124" },
  { index = "pytorch-cu126", extra = "cuda126" },
]
darts-acquisition = { workspace = true }
darts-ensemble = { workspace = true }
darts-export = { workspace = true }
darts-postprocessing = { workspace = true }
darts-preprocessing = { workspace = true }
darts-segmentation = { workspace = true }
darts-superresolution = { workspace = true }
darts-utils = { workspace = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.workspace]
members = ["darts-*"]

# ==============================================================================
# Ruff Configuration
# ==============================================================================
[tool.ruff]
line-length = 120
indent-width = 4  # This is the default

[tool.ruff.lint]
# Default selected Rules are F, E4, E7 and E9 (all stable)
# We also enable preview Rules from E
# See https://docs.astral.sh/ruff/rules/ which rules do what
# F: Pyflakes
# E, W: Pycodestyle
# C: McCabe (code complexity)
# I: isort (import sorting)
# N: pip8-naming (naming conventions)
# D: pydocstyle (docstring formatting) <- this should help us to write documentation
# UP: pyupgrade <- this should help writing up-to-date code
# FLY: flynt <- write f-strings
# NPY: numpy <- this should help writing better numpy code
# FURB: refurb <- this should help writing up-to-date code
# DOC: pydoclint <- this should help writing better docstrings
# RUF: ruff
preview = true
select = ["F", "E", "W", "C", "I", "N", "D", "UP", "FLY", "NPY", "FURB", "DOC", "RUF"]


# Ignore `E402` (import violations) in all `__init__.py` files, and in selected subdirectories.
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{test,tests,docs,tools}/*" = ["E402", "D1"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = ["test_*"]

[tool.ruff.lint.pyflakes]
allowed-unused-imports = ["hvplot.pandas", "hvplot.xarray", "rioxarray", "odc.geo.xr"]
