[project]
name = "darts-acquisition"
version = "0.1.0"
description = "Acquisition of data from various sources for the DARTS dataset."
dependencies = [
    "numpy>=1.26.3, <2",
    "xarray>=2024.9.0",
    "rasterio>=1.4.0",
    "rioxarray>=0.17.0",
    "h5netcdf>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.11"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
    { name = "Konrad Heidler", email = "k.heidler@tum.de" },
    { name = "Jonas Küpper", email = "jonas.kuepper@awi.de" },
    { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
    { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/darts_acquisition"]

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
