[project]
name = "darts-export"
version = "0.1.0"
description = "Dataset export for the DARTS dataset."
dependencies = [
    "numpy>=1.26.3, <2",
    "xarray>=2024.9.0",
    "rasterio>=1.4.0",
    "rioxarray>=0.17.0",
    "h5netcdf>=1.3.0",
    "geopandas>=1.0.1",
]
readme = "README.md"
requires-python = ">= 3.11"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
    { name = "Konrad Heidler", email = "k.heidler@tum.de" },
    { name = "Jonas Küpper", email = "jonas.kuepper@awi.de" },
    { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
    { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/darts_export"]

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D1"]
