[project]
name = "darts-pipeline"
version = "0.1.0"
description = "Ray pipeline for the DARTS dataset."
dependencies = [
    "numpy>=1.26.3, <2",
    "ray[data]>=2.37.0",
    "typer>=0.12.5",
    "xarray>=2024.9.0",
    "h5netcdf>=1.3.0",
]
readme = "README.md"
requires-python = ">= 3.11"
authors = [
    { name = "Ingmar Nitze", email = "ingmar.nitze@awi.de" },
    { name = "Konrad Heidler", email = "k.heidler@tum.de" },
    { name = "Jonas Küpper", email = "jonas.kuepper@awi.de" },
    { name = "Tobias Hölzer", email = "tobias.hoelzer@awi.de" },
    { name = "Lucas von Chamier", email = "lucas.chamier@awi.de" }
]

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.rye.scripts]
darts = "python app/run.py"

[tool.ruff]
# Extend the `pyproject.toml` file in the parent directory...
extend = "../pyproject.toml"
